cmake_minimum_required(VERSION 3.20)
project(jianZhiOffer)

set(CMAKE_CXX_STANDARD 14)

add_executable(jianZhiOffer main.cpp)

add_executable(089_rob 089_rob.cpp)
add_executable(090_robHuan 090_robHuan.cpp)
add_executable(018_isPalindom 018_isPalindom.cpp)
add_executable(027_isPalindrome 027_isPalindrome.cpp)
add_executable(031_LRUCache 031_LRUCache.cpp)
add_executable(033_groupAnagrams 033_groupAnagrams.cpp)
add_executable(034_isAlienSorted 034_isAlienSorted.cpp)
add_executable(001 001.cpp 080_combine.cpp 081_combinationSum.cpp 082_combinationSum2.cpp 083_permute.cpp 084_permuteUnique.cpp)
add_executable(079_subsets 079_subsets.cpp)